--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vueuse/core": "^10.2.1",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "sass": "^1.63.6",
